--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
         <h1>Mine Clicker</h1>
         <p>Cookies : <span id="score">0</span></p>
-        <img src="src/bloc.jpg" alt="Cookie" id="cookie">
+        <img src="bloc.jpg" alt="Cookie" id="cookie">
         <h2>Améliorations</h2>
         <div id="upgrades">
             <button id="upgrade1">Amélioration 1 (+1 par clic) - Coût : <span id="cost1">10</span></button>
