--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <br></br/>
 
         <h1>Mine Clicker</h1>
-        <p>Cookies : <span id="score">0</span></p>
+        <p>Dirt : <span id="score">0</span></p>
         <img src="bloc.jpg" alt="Cookie" id="cookie">
         <h2>Améliorations</h2>
         <div id="upgrades">
