--- a/index.html
+++ b/index.html
@@ -8,30 +8,20 @@
 </head>
 <body>
     <div class="game-container">
-      <br></br/>
-      <br></br/>
-      <br></br/>
-      <br></br/>
-      <br></br/>
-      <br></br/>
-      <br></br/>
-      <br></br/>
-      <br></br/>
-      <br></br/>
-      <br></br/>
-
-        <h1>Mine Clicker</h1>
-        <p>Dirt : <span id="score">0</span></p>
-        <img src="bloc.jpg" alt="Cookie" id="cookie">
+        <h1>MineClicker</h1>
+        <p>Blocs : <span id="score">0</span></p>
+        <img src="block.png" alt="Bloc" id="block">
         <h2>Améliorations</h2>
         <div id="upgrades">
             <button id="upgrade1">Amélioration 1 (+1 par clic) - Coût : <span id="cost1">10</span></button>
             <button id="upgrade2">Amélioration 2 (+5 par clic) - Coût : <span id="cost2">50</span></button>
             <button id="upgrade3">Amélioration 3 (+10 par clic) - Coût : <span id="cost3">100</span></button>
-            <button id="upgrade4">Amélioration 4 (+20 par clic) - Coût : <span id="cost4">150</span></button>
-            <button id="upgrade5">Amélioration 5 (+50 par clic) - Coût : <span id="cost5">200</span></button>
-            <button id="upgrade6">Amélioration 6 (+100 par clic) - Coût : <span id="cost6">500</span></button>
-            <button id="upgrade7">Amélioration 7 (+200 par clic) - Coût : <span id="cost7">1000</span></button>
+            <button id="upgrade4">Amélioration 4 (+50 par clic) - Coût : <span id="cost4">500</span></button>
+            <button id="upgrade5">Amélioration 5 (+100 par clic) - Coût : <span id="cost5">1000</span></button>
+            <button id="upgrade6">Amélioration 6 (+500 par clic) - Coût : <span id="cost6">5000</span></button>
+            <button id="upgrade7">Amélioration 7 (+1000 par clic) - Coût : <span id="cost7">10000</span></button>
+            <button id="upgrade8">Amélioration 8 (+5000 par clic) - Coût : <span id="cost8">50000</span></button>
+            <button id="auto-clicker">Auto-Clicker (+1/s) - Coût : <span id="autoCost">100</span></button>
         </div>
     </div>
     <script src="script.js"></script>
