--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="game-container">
         <h1>MineClicker</h1>
         <p>Blocs : <span id="score">0</span></p>
-        <img src="block.png" alt="Bloc" id="block">
+        <img src="bloc.png" alt="Bloc" id="block">
         <h2>Améliorations</h2>
         <div id="upgrades">
             <button id="upgrade1">Amélioration 1 (+1 par clic) - Coût : <span id="cost1">10</span></button>
