--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
         <br><br />
         <br><br />
         <h1>MineClicker</h1>
-        <p>Blocs : <span id="score">0</span></p>
-        <img height="250px" src="bloc.jpg" alt="Bloc" id="block">
+        <p>Blocs actuels : <span id="score">0</span></p>
+        <p>Total de blocs : <span id="totalScore">0</span></p>
+        <img src="block.png" alt="Bloc" id="block">
         <h2>Améliorations</h2>
         <div id="upgrades">
             <button id="upgrade1">Amélioration 1 (+1 par clic) - Coût : <span id="cost1">10</span></button>
@@ -32,7 +33,12 @@
             <button id="upgrade6">Amélioration 6 (+500 par clic) - Coût : <span id="cost6">5000</span></button>
             <button id="upgrade7">Amélioration 7 (+1000 par clic) - Coût : <span id="cost7">10000</span></button>
             <button id="upgrade8">Amélioration 8 (+5000 par clic) - Coût : <span id="cost8">50000</span></button>
-            <button id="auto-clicker">Auto-Clicker (+1/s) - Coût : <span id="autoCost">100</span></button>
+            <button id="auto-clicker1">Auto-Clicker 1 (+1/s) - Coût : <span id="autoCost1">100</span></button>
+            <button id="auto-clicker2">Auto-Clicker 2 (+5/s) - Coût : <span id="autoCost2">500</span></button>
+            <button id="auto-clicker3">Auto-Clicker 3 (+10/s) - Coût : <span id="autoCost3">1000</span></button>
+            <button id="auto-clicker4">Auto-Clicker 4 (+50/s) - Coût : <span id="autoCost4">5000</span></button>
+            <button id="auto-clicker5">Auto-Clicker 5 (+100/s) - Coût : <span id="autoCost5">10000</span></button>
+            <button id="auto-clicker6">Auto-Clicker 6 (+500/s) - Coût : <span id="autoCost6">50000</span></button>
         </div>
     </div>
     <script src="script.js"></script>
