--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <h1>MineClicker</h1>
         <p>Blocs actuels : <span id="score">0</span></p>
         <p>Total de blocs : <span id="totalScore">0</span></p>
-        <img src="block.png" alt="Bloc" id="block">
+        <img src="bloc.jpg" alt="Bloc" id="block">
         <h2>Améliorations</h2>
         <div id="upgrades">
             <button id="upgrade1">Amélioration 1 (+1 par clic) - Coût : <span id="cost1">10</span></button>
