--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <h1>MineClicker</h1>
         <p>Blocs actuels : <span id="score">0</span></p>
         <p>Total de blocs : <span id="totalScore">0</span></p>
-        <img src="bloc.jpg" alt="Bloc" id="block">
+        <img height="250px" src="bloc.jpg" alt="Bloc" id="block">
         <div class="column">
             <h2>Améliorations</h2>
             <div id="upgrades">
