--- a/index.html
+++ b/index.html
@@ -51,6 +51,11 @@
             <button id="auto-clicker4">Auto-Clicker 4 (+50/s) - Coût : <span id="autoCost4">5000</span></button>
             <button id="auto-clicker5">Auto-Clicker 5 (+100/s) - Coût : <span id="autoCost5">10000</span></button>
             <button id="auto-clicker6">Auto-Clicker 6 (+500/s) - Coût : <span id="autoCost6">50000</span></button>
+            <button id="auto-clicker7">Auto-Clicker 7 (+1K/s) - Coût : <span id="autoCost6">100000</span></button>
+            <button id="auto-clicker8">Auto-Clicker 8 (+5K/s) - Coût : <span id="autoCost6">200000</span></button>
+            <button id="auto-clicker9">Auto-Clicker 9 (+10K/s) - Coût : <span id="autoCost6">500000</span></button>
+            <button id="auto-clicker10">Auto-Clicker 10 (+50K/s) - Coût : <span id="autoCost6">1000000</span></button>
+            
         </div>
     </div>
     <script src="script.js"></script>
