--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
         <br><br />
         
         <h1>MineClicker</h1>
+         <button id="tree">arbre de compétence</button>
         <p>Blocs actuels : <span id="score">0</span></p>
         <p>Total de blocs : <span id="totalScore">0</span></p>
         <img src="bloc.jpg" alt="Bloc" id="block">
@@ -75,6 +76,11 @@
             <button id="upgrade13">Amélioration 13 (+1M par clic) - Coût : <span id="cost13">5M</span></button>
             <button id="upgrade14">Amélioration 14 (+10M par clic) - Coût : <span id="cost14">50M</span></button>
             <button id="upgrade15">Amélioration 15 (+100M par clic) - Coût : <span id="cost15">500M</span></button>
+            <button id="upgrade16">Amélioration 16 (+150M par clic) - Coût : <span id="cost16">1Md</span></button>
+            <button id="upgrade17">Amélioration 17 (+200M par clic) - Coût : <span id="cost17">5Md</span></button>
+            <button id="upgrade18">Amélioration 18 (+250M par clic) - Coût : <span id="cost18">10Md</span></button>
+            <button id="upgrade19">Amélioration 19 (+500M par clic) - Coût : <span id="cost19">50Md</span></button>
+            <button id="upgrade20">Amélioration 20 (+1Md par clic) - Coût : <span id="cost20">100Md</span></button>
             <button id="auto-clicker1">Auto-Clicker 1 (+1/s) - Coût : <span id="autoCost1">100</span></button>
             <button id="auto-clicker2">Auto-Clicker 2 (+5/s) - Coût : <span id="autoCost2">500</span></button>
             <button id="auto-clicker3">Auto-Clicker 3 (+10/s) - Coût : <span id="autoCost3">1000</span></button>
