--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <br><br />
         
         <h1>MineClicker</h1>
-         <button id="tree">arbre de compétence</button>
+         <button id="openModalBtn">arbre de compétence</button>
         <p>Blocs actuels : <span id="score">0</span></p>
         <p>Total de blocs : <span id="totalScore">0</span></p>
         <img src="bloc.jpg" alt="Bloc" id="block">
@@ -109,6 +109,14 @@
             <button id="auto-clicker14">Auto-Clicker 14 (+1Md/s) - Coût : <span id="autoCost14">750M</span></button>
             <button id="auto-clicker15">Auto-Clicker 15 (+10Md/s) - Coût : <span id="autoCost15">5Md</span></button>
             
+        </div>
+    </div>
+    <div id="myModal" class="modal">
+        <div class="modal-content">
+            <span class="close">&times;</span>
+            <p>Contenu de la fenêtre modale.</p>
+          <br/><br/><br/><br/><br/><br/><br/><br/><br/>
+          <p>test</p>
         </div>
     </div>
     <script src="script.js"></script>
