--- a/index.html
+++ b/index.html
@@ -116,9 +116,12 @@
     <div id="myModal" class="modal">
         <div class="modal-content">
             <span class="close">&times;</span>
-            <p>Contenu de la fenêtre modale.</p>
-          <br/><br/><br/><br/><br/><br/><br/><br/><br/>
-          <p>test</p>
+            <h2>Arbre de compétence</h2>
+            <br/>
+            <p>Les rebirth permette de renaitre avec du score en plus a chaque click ou bien plus</p>
+            <p>nombres de rebirth : <span id="rebirth">0</span></p>
+            <button id="BuyRebirth">Rennaitre - Coût : <span id="costRebirth">1000</span></button>
+            <p>Attention vous perdez tous vos bloc a chaque rebirth !</p>
         </div>
     </div>
     <script src="script.js"></script>
