--- a/index.html
+++ b/index.html
@@ -122,6 +122,9 @@
             <p>nombres de rebirth : <span id="rebirth">0</span></p>
             <button id="BuyRebirth">Rennaitre - Coût : <span id="costRebirth">1000</span></button>
             <p>Attention vous perdez tous vos bloc a chaque rebirth !</p>
+            <h2>Code</h2>
+            <input id="search" type="text" autocomplete="off"/>
+            <p>les code bonus sont donnés sur twitter ou sur discord</p>
         </div>
     </div>
     <script src="script.js"></script>
