--- a/index.html
+++ b/index.html
@@ -123,7 +123,8 @@
             <button id="BuyRebirth">Rennaitre - Coût : <span id="costRebirth">1000</span></button>
             <p>Attention vous perdez tous vos bloc a chaque rebirth !</p>
             <h2>Code</h2>
-            <input id="search" type="text" autocomplete="off"/>
+            <input type="text" id="inputText" placeholder="entrer votre Code bonus... ">
+            <button onclick="detectWords()">Envoyer</button>
             <p>les code bonus sont donnés sur twitter ou sur discord</p>
         </div>
     </div>
